css/main.scss
---
---

@charset "utf-8";

// Navy #0E2747 or #030f9c from Word Doc
$primary-color: #030f9c;

// Enhanced lines spacing for long h3 grafs
.prose.h3 {
    line-height: 1.35;
}

// Vertically centering html right arrow in footer
.arrow {
    top: -2px;
}

// Image macro for homepage background
.macro {
    z-index: -1;
}
.macro img {
    -moz-transform: scale(9.1);
    -webkit-transform: scale(9.1);
    transform: scale(2.1);
    
    min-height: 100%;
    min-width: 960px;
    
    width: 100%;
    height: auto;
    
    top: -25%;
    left: -15%;

    opacity: 0.50;
}

// Google Streetview embed
#js_streetview {
    width: 100%;
    height: 300px;
}

// Tint for homepage background image
.macro:after {
    //content: "";
    //display: block;
    //position: absolute;
    //top: 0;
    //bottom: 0;
    //left: 0;
    //right: 0;
    //background: rgba(3, 15, 156, 0.3);
}

// CSS Shim for annoying comma and space in liquid template for loops 
.comma-list > a:after, .comma-list > p:after {
    content: ','
}
    .comma-list:last-of-type > a:after, .comma-list:last-of-type > p:after {
        content:''
    }
// Pointer hack for fixed header and clicking links below
.pointer-events {
    pointer-events: none;
}

// Icon style
.icon {
    height: 30px;
    width: 30px;
}

// Parent and childern underline on hover
.parent-hover:hover a {
    text-decoration: underline;
}

a.text-decoration-none:active {
    color: $primary-color;
}

// Caps override for links
a.caps, h1.caps {
    letter-spacing: inherit;
}

// Lowercase utitlity class
.lowercase {
    text-transform: lowercase;
}

// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "_base",
        "_basscss_btn",
        "_basscss_colors",
        "_basscss_forms",
        "_basscss_background-colors",
        "_basscss_responsive-margin",
        "_basscss_responsive-padding"
;

